@@ -13,6 +13,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -54,8 +55,8 @@ public class UserService {
     @Transactional(readOnly = true)
     public FindUserIdResponseDto findUser(Long id) {
 
-        User user = userRepository.findByIdOrElseThrow(id);
-
+        User user = userRepository.findByIdAndIsDeletedFalse(id)
+                .orElseThrow(() -> new IllegalArgumentException("USER_NOT_FOUND"));
         return FindUserIdResponseDto.toDto(user);
     }
 
@@ -63,7 +64,10 @@ public class UserService {
     @Transactional(readOnly = true)
     public List<UserResponseDto> findAll() {
 
-        return userRepository.findAll().stream().map(UserResponseDto::toDto).toList();
+        List<User> users = userRepository.findByIsDeletedFalse();
+
+        return users.stream().map(UserResponseDto::toDto).collect(Collectors.toList());
+
     }
 
     //유저 정보 수정
